# vigmeup

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  configure  configure.in  vigmeup.lsm
po/: Makefile  Makefile.in
vigmeup/: Makefile.am  Makefile.in  classes.db  main.cpp  mini-vigmeup.xpm  resource.h  vigmeup.cpp  vigmeup.h  vigmeup.kdelnk  vigmeup.xpm
vigmeup/.xvpics/: mini-vigmeup.xpm  vigmeup.xpm
vigmeup/docs/: Makefile.in
vigmeup/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.nif  index.sgml  index.sgml~
