####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = vigmeup 

EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO vigmeup.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

